# team-table

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
scripts/: poll_daemon.py  smoke_test.py
src/team_table/: __init__.py  __main__.py  config.py  db.py  notifications.py  notify.py  server.py  validation.py
src/team_table/tools/: __init__.py  audit.py  context.py  messaging.py  registration.py  tasks.py
tests/: conftest.py  test_audit.py  test_context.py  test_messaging.py  test_notifications.py  test_poll_daemon.py  test_registration.py  test_security.py  test_tasks.py
