[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "team-table"
version = "0.1.0"
description = "Multi-model AI team coordination via MCP"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0,<3",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
